--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
     </header>
     <main>
       <nav>
-        <a class="link-nav" href="mysites.html"><b>Мои проекты!</b></a>
+        <a class="link-nav" href="https://git3huber3.github.io/page3/"><b>Мои проекты!</b></a>
         <a class="link-nav" href="info.html"><b>Полезная информация.</b></a>
-        <a class="link-nav" href="info.html"><b>Обо мне.</b></a>
+        <a class="link-nav" href="https://git3huber3.github.io/page2/"><b>Обо мне.</b></a>
       </nav>
       <h1 class="web">Web-sites<br/> developer</h1>
       <p>Разметка и стилизация</p>
